[tool.poetry]
name = "rag-streamlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.0"
langchain = "^0.1.5"
sentence-transformers = "^2.3.1"
pypdf = "^4.0.1"
chromadb = "^0.4.22"
RAGatouille = "^0.0.6b4"
langchain-community = "^0.0.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
